# PyRoboFrames

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_REVIEW.md  Cargo.toml  DEPLOYMENT_SECURITY.md  DEVELOPMENT.md  IMPLEMENTATION_ROADMAP.md  KNOWN_ISSUES.md  Makefile  NEXT_PRIORITIES.md  PRODUCTION_AUDIT_REPORT.md  README.md  RELEASE_SUMMARY_v0.3.0.md  ROADMAP.md  ROADMAP_HONEST.md  SECURITY.md  SECURITY_AUDIT.md  install.sh  pyproject.toml  v0.4.0_IMPLEMENTATION_PLAN.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: README.md  codec_benchmark.py  codec_comparison.py  nvidia_benchmark.py  throughput.py
crates/pyroboframes-core/: Cargo.toml
crates/pyroboframes-core/src/: calibration.rs  data.rs  dataset.rs  decode.rs  depth.rs  episodes.rs  info.rs  lib.rs  loader.rs  mcap.rs  pipeline.rs  rng.rs  ros2.rs  rosbag.rs  sampler.rs  split.rs  stats.rs  validate.rs  window.rs
crates/pyroboframes-py/: Cargo.toml
crates/pyroboframes-py/src/: lib.rs
docs/: AUTOMOTIVE_STITCHING_PHASE1.md  AUTOMOTIVE_STITCHING_PHASE2_3.md  AUTOMOTIVE_VIDEO_STITCHING_RESEARCH.md  CAMERA_CALIBRATION.md  CODEC_SELECTION.md  COMPARISON.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  DEPTH_CAMERAS.md  GPU_VERIFICATION.md  IMPLEMENTATION_PLAN.md  MISSING_FEATURES.md  MULTIMODAL_FUSION.md  PRIORITIES.md  ROADMAP.md  ROADMAP_V0.5.1_RESEARCH.md  ROADMAP_V0.5.3_SAM_MODELS.md  VERSION_0.5.0_SUMMARY.md  VERSION_0.5.2_SUMMARY.md
examples/: autonomous_driving_360_perception.py  autonomous_driving_advanced_perception.py  autonomous_driving_clip_embeddings.py  autonomous_driving_dataset_3d_perception.py  autonomous_driving_grounding_dino.py  autonomous_driving_multimodal_fusion.py  autonomous_driving_sam3_segmentation.py  benchmark_gpu_performance.py  humanoid_multimodal_fusion.py  robotdog_proprioceptive_learning.py
pyroboframes/: okf_dataset_composition.py
python/pyroboframes/: __init__.py  _format_registry.py  augmentation.py  backend.py  cli_workflow.py  compression.py  cvcuda_transforms.py  dataframe.py  dataloader.py  dataset_loaders.py  depth_io.py  distributed.py  episode_cache.py  error_messages.py  filtering.py  gpu_acceleration.py  hdf5.py  hub.py  lazy_parquet.py  lerobot.py  masking.py  netcdf.py  occupancy_3d.py  proprioceptive_loader.py  quality.py  rlds.py  security.py  sensor_fusion.py  server_workflow.py  streaming.py  tensorflow_support.py  transforms.py  validation.py  versioning.py  vision.py  warnings.py
python/pyroboframes/automotive/: __init__.py  bev.py  blending.py  camera_layouts.py  clip_embeddings.py  datasets.py  gpu_backend.py  grounding_dino.py  multimodal_fusion.py  nuscenes_utils.py  optical_flow.py  perception_3d.py  projection.py  sam3_segmentation.py  stitching.py  tfrecord_utils.py
scripts/: verify_gpu_support.py
tests/: test_automotive_phase2_3.py  test_automotive_phase4.py  test_automotive_phase5_6.py  test_automotive_phase7a.py  test_automotive_phase7b.py  test_automotive_phase7c.py  test_automotive_phase7d.py  test_automotive_stitching.py  test_backend_parity.py  test_caching.py  test_calibration.py  test_codecs.py  test_dataframe.py  test_dataset_loaders.py  test_depth.py  test_depth_io.py  test_distributed.py  test_features.py  test_gpu_acceleration.py  test_hdf5.py  test_loader.py  test_mcap.py  test_netcdf.py  test_occupancy_3d.py  test_p4.py  test_proprioceptive_loader.py  test_quality_cross.py  test_sensor_fusion.py  test_smoke.py  test_storage.py  test_validation.py
