[workspace]
resolver = "2"
members = [
    "crates/pyroboframes-core",
    "crates/pyroboframes-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["Georgi Mammen Mullassery <mullassery@gmail.com>"]
repository = "https://github.com/Mullassery/PyRoboFrames"
description = "Zero-copy, hardware-accelerated robot-learning dataloader for Apple Silicon"

[workspace.dependencies]
thiserror = "2"
crossbeam-channel = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
