[workspace]
resolver = "2"
members = [
    "crates/pyroboframes-core",
    "crates/pyroboframes-py",
]

[workspace.package]
version = "0.1.12"
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["Georgi Mammen Mullassery <mullassery@gmail.com>"]
repository = "https://github.com/Mullassery/PyRoboFrames"
description = "Early/experimental LeRobot dataloader for Apple Silicon & Linux (FFmpeg decode; hardware decode + zero-copy MLX in progress)"

[workspace.dependencies]
thiserror = "2"
crossbeam-channel = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
