[workspace]
resolver = "2"
members = [
    "crates/pyroboframes-core",
    "crates/pyroboframes-py",
]

[workspace.package]
version = "1.2.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["Georgi Mammen Mullassery <mullassery@gmail.com>"]
repository = "https://github.com/Mullassery/PyRoboFrames"
description = "Fast ML dataloader for robot learning — LeRobot, RLDS, HDF5, NetCDF, hardware video decode, distributed S3/GCS streaming"

[workspace.dependencies]
thiserror = "2"
crossbeam-channel = "0.5"

[profile.release]
lto = "thin"
codegen-units = 1
