[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyroboframes"
description = "Early/experimental LeRobot dataloader for Apple Silicon & Linux — FFmpeg decode, NumPy/MLX/PyTorch output (hardware decode, zero-copy MLX & parallel prefetch in progress)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
keywords = ["robotics", "robot-learning", "lerobot", "mlx", "apple-silicon", "dataloader", "videotoolbox"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    # numpy is imported at package import (transforms.py), and the loader returns NumPy arrays;
    # pyarrow is needed to read the Parquet that `convert_mcap` writes.
    "numpy>=1.24",
    "pyarrow>=14",
]

[project.urls]
Homepage = "https://github.com/Mullassery/PyRoboFrames"
Repository = "https://github.com/Mullassery/PyRoboFrames"
Issues = "https://github.com/Mullassery/PyRoboFrames/issues"

[project.optional-dependencies]
mlx = ["mlx>=0.20"]
dev = ["pytest>=8", "numpy>=1.24", "maturin>=1.7"]

[tool.maturin]
manifest-path = "crates/pyroboframes-py/Cargo.toml"
module-name = "pyroboframes._core"
python-source = "python"
features = ["pyo3/extension-module", "ffmpeg"]
