[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "pyroboframes"
description = "High-performance dataloader for robot learning datasets. LeRobot format support, hardware-accelerated video decode via VideoToolbox, MLX array output. Zero-copy data pipeline optimized for Apple Silicon and edge robotics."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
maintainers = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
keywords = [
    "robotics",
    "robot-learning",
    "ml-dataloader",
    "lerobot",
    "dataset-loader",
    "computer-vision",
    "video-processing",
    "mlx",
    "pytorch",
    "jax",
    "numpy",
    "data-pipeline",
    "machine-learning",
    "reinforcement-learning",
    "edge-ai",
    "apple-silicon",
    "video-decode",
    "zero-copy",
    "deep-learning",
    "neural-networks",
    "training-framework",
    "data-preprocessing"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    # numpy is imported at package import (transforms.py), and the loader returns NumPy arrays;
    # pyarrow is needed to read the Parquet that `convert_mcap` writes.
    "numpy>=1.24",
    "pyarrow>=14",
]

[project.urls]
Homepage = "https://github.com/Mullassery/PyRoboFrames"
Repository = "https://github.com/Mullassery/PyRoboFrames"
Documentation = "https://github.com/Mullassery/PyRoboFrames#readme"
"Bug Tracker" = "https://github.com/Mullassery/PyRoboFrames/issues"
Changelog = "https://github.com/Mullassery/PyRoboFrames/releases"
"Source Code" = "https://github.com/Mullassery/PyRoboFrames/tree/main"
Discussions = "https://github.com/Mullassery/PyRoboFrames/discussions"

[project.optional-dependencies]
mlx = ["mlx>=0.20"]
dev = ["pytest>=8", "numpy>=1.24", "maturin>=1.7"]

[tool.maturin]
manifest-path = "crates/pyroboframes-py/Cargo.toml"
module-name = "pyroboframes._core"
python-source = "python"
features = ["pyo3/extension-module", "ffmpeg"]
