[package]
name = "pyroboframes-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core engine for PyRoboFrames: dataset reading, hardware video decode, and zero-copy windowing"

[dependencies]
thiserror.workspace = true
crossbeam-channel.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arrow = "55"
parquet = "55"
lru = "0.12"
mcap = "0.9"
memmap2 = "0.9"
bytes = "1.6"
prost-reflect = { version = "0.14", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
videotoolbox = { version = "0.18", features = ["decompression"], optional = true }

[features]
# Real hardware decode backends:
#   videotoolbox — Apple Media Engine HW decode (macOS) via ffmpeg -hwaccel videotoolbox
#   ffmpeg       — FFmpeg decode (Linux VAAPI + software)
#   cuda         — NVIDIA NVDEC + CUDA decode/output (Linux with CUDA libraries present)
videotoolbox = ["dep:videotoolbox"]
ffmpeg = []
cuda = []

[dev-dependencies]
tempfile = "3"
prost = "0.13"
prost-types = "0.14"

[lints.clippy]
all = "warn"
