[package]
name = "pyroboframes-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python bindings for PyRoboFrames (PyO3)"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyroboframes-core = { path = "../pyroboframes-core" }
pyo3 = { version = "0.22", features = ["abi3-py310"] }

[features]
# Enabled by maturin when building the wheel (see pyproject.toml). Left off for plain
# `cargo build`/`cargo test` so the crate links against the local Python instead of
# requiring maturin's dynamic-lookup linker flags.
extension-module = ["pyo3/extension-module"]
